--- a/res/values-en-rGB/strings.xml
+++ b/res/values-en-rGB/strings.xml
@@ -317,11 +317,9 @@
     <string name="security_settings_title" msgid="6710768415432791970">"Security"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"Encryption and credentials"</string>
     <string name="encryption_and_credential_settings_summary" product="default" msgid="5298195959570992363">"Phone encrypted"</string>
-    <!-- no translation found for not_encrypted_summary (2251945842585788254) -->
-    <skip />
+    <string name="not_encrypted_summary" product="default" msgid="2251945842585788254">"Phone not encrypted"</string>
     <string name="encryption_and_credential_settings_summary" product="tablet" msgid="3776741531205406800">"Device encrypted"</string>
-    <!-- no translation found for not_encrypted_summary (2374263654698719382) -->
-    <skip />
+    <string name="not_encrypted_summary" product="tablet" msgid="2374263654698719382">"Device not encrypted"</string>
     <string name="lockscreen_settings_title" msgid="4086121748092341549">"Lock screen"</string>
     <string name="lockscreen_settings_what_to_show_category" msgid="9205490627927741254">"What to show"</string>
     <string name="security_settings_summary" msgid="1627059516127354233">"Set My Location, screen unlock, SIM card lock, credential storage lock"</string>
@@ -507,6 +505,8 @@
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"Fingerprint added"</string>
     <string name="security_settings_fingerprint_enroll_finish_message" msgid="3469254005423998143">"Now you can use your fingerprint to unlock your phone or verify that it’s you, like when you sign in to apps"</string>
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Do it later"</string>
+    <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Lift, then touch again"</string>
+    <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Place the side of your fingerprint on the sensor and hold, then switch to the other side"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_title" msgid="352947044008973812">"Skip fingerprint setup?"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_message" msgid="4876965433600560365">"You’ve chosen to use your fingerprint as one way to unlock your phone. If you skip now, you’ll need to set this up later. Setup takes only a minute or so."</string>
     <string name="lock_screen_pin_skip_message" product="tablet" msgid="4938798234214623521">"A PIN protects the tablet if it’s lost or stolen"</string>
@@ -584,14 +584,10 @@
     <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"You won\'t be able to use your fingerprint to unlock your phone or verify that it\'s you in apps."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"You won\'t be able to use your fingerprint to unlock your work profile, authorise purchases or sign in to work apps."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Yes, remove"</string>
-    <!-- no translation found for encryption_settings_title (2848716008695618360) -->
-    <skip />
-    <!-- no translation found for encrypt_title (6518642273119816435) -->
-    <skip />
-    <!-- no translation found for encrypt_title (7337365190988321100) -->
-    <skip />
-    <!-- no translation found for encrypted_summary (545623487587251207) -->
-    <skip />
+    <string name="encryption_settings_title" msgid="2848716008695618360">"Encryption"</string>
+    <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Encrypt tablet"</string>
+    <string name="encrypt_title" product="default" msgid="7337365190988321100">"Encrypt phone"</string>
+    <string name="encrypted_summary" msgid="545623487587251207">"Encrypted"</string>
     <string name="suggested_lock_settings_title" msgid="7836065447159730217">"Secure your phone"</string>
     <string name="suggested_lock_settings_summary" product="tablet" msgid="3213718550422761562">"Set screen lock to protect tablet"</string>
     <string name="suggested_lock_settings_summary" product="device" msgid="8479766049078378225">"Set screen lock to protect device"</string>
@@ -1070,8 +1066,7 @@
     <string name="wifi_use_system_certs" msgid="5587866698144996931">"Use system certificates"</string>
     <string name="wifi_do_not_provide_eap_user_cert" msgid="6336636553673065145">"Do not provide"</string>
     <string name="wifi_do_not_validate_eap_server" msgid="4673867078988209732">"Do not validate"</string>
-    <!-- no translation found for wifi_trust_on_first_use (7488431582505858774) -->
-    <skip />
+    <string name="wifi_trust_on_first_use" msgid="7488431582505858774">"Trust on first use"</string>
     <string name="wifi_ssid_too_long" msgid="5961719058705013875">"Network name is too long."</string>
     <string name="wifi_no_domain_warning" msgid="1452133316532366772">"Must specify a domain."</string>
     <string name="wifi_no_user_cert_warning" msgid="8466376918835248956">"Certificate required."</string>
@@ -1415,7 +1410,6 @@
     <string name="screensaver_settings_disabled_prompt" msgid="1166343194760238835">"To control what happens when the phone is docked and/or sleeping, turn the screen saver on."</string>
     <string name="screensaver_settings_when_to_dream" msgid="8145025742428940520">"When to start"</string>
     <string name="screensaver_settings_current" msgid="390472865895976891">"Current screen saver"</string>
-    <string name="screensaver_settings_dream_start" msgid="6486360145976995856">"Start now"</string>
     <string name="screensaver_settings_button" msgid="6159236558934930238">"Settings"</string>
     <string name="automatic_brightness" msgid="4599827881929079513">"Automatic brightness"</string>
     <string name="lift_to_wake_title" msgid="8994218158737714046">"Lift to wake"</string>
@@ -2276,6 +2270,8 @@
     <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"Learn more about caption preferences"</string>
     <string name="accessibility_screen_magnification_title" msgid="1211169976144629087">"Magnification"</string>
     <string name="accessibility_screen_magnification_shortcut_title" msgid="2387963646377987780">"Magnification shortcut"</string>
+    <string name="accessibility_screen_magnification_follow_typing_title" msgid="494025442124701045">"Follow typing"</string>
+    <string name="accessibility_screen_magnification_follow_typing_summary" msgid="5616263345412748821">"Magnification area automatically follows the text as you type"</string>
     <string name="accessibility_screen_magnification_about_title" msgid="8857919020223505415">"About magnification"</string>
     <string name="accessibility_screen_magnification_footer_learn_more_content_description" msgid="924848332575978463">"Learn more about magnification"</string>
     <string name="accessibility_magnification_mode_title" msgid="8446475127807168063">"Magnification type"</string>
@@ -2298,6 +2294,12 @@
     <string name="accessibility_screen_magnification_state_navbar_gesture" msgid="8067042663897802231">"Magnify with shortcut &amp; triple-tap"</string>
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"About <xliff:g id="SERVICE">%1$s</xliff:g>"</string>
     <string name="accessibility_text_reading_options_title" msgid="4684613866595056574">"Text and reading options"</string>
+    <!-- no translation found for accessibility_text_reading_preview_mail_subject (8410011779056611430) -->
+    <skip />
+    <!-- no translation found for accessibility_text_reading_preview_mail_from (8008010238385973504) -->
+    <skip />
+    <!-- no translation found for accessibility_text_reading_preview_mail_content (2845972588748160509) -->
+    <skip />
     <string name="accessibility_screen_option" msgid="8465307075278878145">"Options"</string>
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"Zoom in on screen"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"Tap 3 times to zoom"</string>
@@ -2404,17 +2406,21 @@
     <string name="accessibility_autoclick_longer_desc" msgid="2566025502981487443">"Longer"</string>
     <string name="accessibility_autoclick_seekbar_desc" msgid="8363959277814621118">"Auto click time"</string>
     <string name="accessibility_vibration_settings_title" msgid="936301142478631993">"Vibration and haptics"</string>
-    <!-- no translation found for accessibility_vibration_settings_summary (3690308537483465527) -->
-    <skip />
+    <string name="accessibility_vibration_settings_summary" msgid="3690308537483465527">"Control the vibration strength for different usages"</string>
     <string name="accessibility_call_vibration_category_title" msgid="2545607568768192318">"Calls"</string>
     <string name="accessibility_notification_alarm_vibration_category_title" msgid="2683635252414849417">"Notifications and alarms"</string>
     <string name="accessibility_interactive_haptics_category_title" msgid="3162855291184592021">"Interactive haptics"</string>
+    <string name="accessibility_vibration_primary_switch_title" msgid="6162579254864450592">"Use vibration and haptics"</string>
+    <string name="accessibility_alarm_vibration_title" msgid="4661294337828522745">"Alarm vibration"</string>
+    <string name="accessibility_media_vibration_title" msgid="1372073715403945428">"Media vibration"</string>
     <string name="accessibility_ring_vibration_title" msgid="4689811297654320885">"Ring vibration"</string>
     <string name="accessibility_notification_vibration_title" msgid="6205679908785776478">"Notification vibration"</string>
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"Touch feedback"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"Use <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"Open <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_service_quick_settings_tooltips_content" msgid="4033381225041886637">"Swipe down to quickly turn <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> on or off in quick settings"</string>
+    <!-- no translation found for accessibility_quick_settings_tooltips_dismiss (1684723414081728584) -->
+    <skip />
     <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"Use colour correction"</string>
     <string name="accessibility_daltonizer_shortcut_title" msgid="7480360363995502369">"Colour correction shortcut"</string>
     <string name="accessibility_daltonizer_about_title" msgid="6063650804116981287">"About colour correction"</string>
@@ -2557,6 +2563,10 @@
     <string name="keywords_hearing_aids" msgid="524979615168196199">"hard of hearing, hearing loss"</string>
     <string name="keywords_rtt" msgid="2429130928152514402">"hard of hearing, hearing loss, captions, Teletype, TTY"</string>
     <string name="keywords_voice_access" msgid="7807335263195876454"></string>
+    <string name="fast_pair_settings" msgid="3308819519080016185">"Fast Pair"</string>
+    <string name="fast_pair_settings_summary" msgid="1786567691058982987">"Nearby detection of Fast Pair Bluetooth devices."</string>
+    <!-- no translation found for fast_pair_main_switch_title (1439039801201425194) -->
+    <skip />
     <string name="print_settings" msgid="8519810615863882491">"Printing"</string>
     <string name="print_settings_summary_no_service" msgid="6721731154917653862">"Off"</string>
     <plurals name="print_settings_summary" formatted="false" msgid="1034273609054146099">
@@ -3345,12 +3355,29 @@
     <string name="user_choose_copy_apps_to_another_user" msgid="5914037067347012870">"Choose apps to install"</string>
     <string name="user_copy_apps_menu_title" msgid="5354300105759670300">"Install available apps"</string>
     <string name="nfc_payment_settings_title" msgid="2043139180030485500">"Contactless payments"</string>
+    <!-- no translation found for nfc_default_payment_settings_title (2150504446774382261) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_footer (978535088340021360) -->
+    <skip />
+    <!-- no translation found for nfc_more_details (1700713533074275233) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_workapp_confirmation_title (746921251872504687) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_title (1533022606333010329) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_1 (2917430119080702912) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_2 (480686123504790005) -->
+    <skip />
     <string name="nfc_payment_how_it_works" msgid="3658253265242662010">"How it works"</string>
     <string name="nfc_payment_no_apps" msgid="6840001883471438798">"Pay with your phone in shops"</string>
     <string name="nfc_payment_default" msgid="3769788268378614608">"Payment default"</string>
     <string name="nfc_payment_default_not_set" msgid="6471905683119084622">"Not set"</string>
     <string name="nfc_payment_app_and_desc" msgid="2607417639227030398">"<xliff:g id="APP">%1$s</xliff:g> - <xliff:g id="DESCRIPTION">%2$s</xliff:g>"</string>
-    <string name="nfc_payment_use_default" msgid="788899906312142803">"Use default"</string>
+    <!-- no translation found for nfc_payment_use_default (6127665705799658860) -->
+    <skip />
+    <!-- no translation found for nfc_payment_use_default_dialog (8556328090777785383) -->
+    <skip />
     <string name="nfc_payment_favor_default" msgid="4508491832174644772">"Always"</string>
     <string name="nfc_payment_favor_open" msgid="8554643344050373346">"Except when another payment app is open"</string>
     <string name="nfc_payment_pay_with" msgid="3001320460566523453">"At a contactless terminal, pay with:"</string>
@@ -3576,17 +3603,20 @@
     <string name="keywords_screen_timeout" msgid="8921857020437540572">"screen, lock time, timeout, lockscreen"</string>
     <string name="keywords_storage_settings" msgid="6018856193950281898">"memory, cache, data, delete, clear, free, space"</string>
     <string name="keywords_bluetooth_settings" msgid="2588159530959868188">"connected, device, headphones, headset, speaker, wireless, pair, earbuds, music, media"</string>
+    <string name="keywords_fast_pair" msgid="5422942398816611159">"pair, earbuds, Bluetooth"</string>
     <string name="keywords_wallpaper" msgid="7332890404629446192">"background, theme, grid, customise, personalise"</string>
     <string name="keywords_styles" msgid="5291614313348476068">"icon, accent, colour"</string>
     <string name="keywords_assist_input" msgid="3086289530227075593">"default, assistant"</string>
     <string name="keywords_default_payment_app" msgid="5162298193637362104">"payment, default"</string>
     <string name="keywords_ambient_display" msgid="3149287105145443697">"incoming notification"</string>
     <string name="keywords_hotspot_tethering" msgid="3688439689671232627">"usb tether, bluetooth tether, wifi hotspot"</string>
+    <string name="keywords_accessibility_vibration_primary_switch" msgid="730692154347231253">"haptics, vibrate, vibration"</string>
     <string name="keywords_touch_vibration" msgid="1125291201902251273">"haptics, vibrate, screen, sensitivity"</string>
     <string name="keywords_ring_vibration" msgid="1736301626537417541">"haptics, vibrate, phone, call, sensitivity, ring"</string>
-    <!-- no translation found for keywords_ramping_ringer_vibration (3678966746742257366) -->
-    <skip />
-    <string name="keywords_notification_vibration" msgid="9162262178415439951">"haptics, vibrate, sensitivity"</string>
+    <string name="keywords_ramping_ringer_vibration" msgid="3678966746742257366">"haptics, vibrate, phone, call, ring, gradually"</string>
+    <string name="keywords_notification_vibration" msgid="2620799301276142183">"haptics, vibrate, sensitivity, notification"</string>
+    <string name="keywords_alarm_vibration" msgid="4833220371621521817">"haptics, vibrate, sensitivity, alarm"</string>
+    <string name="keywords_media_vibration" msgid="723896490102792327">"haptics, vibrate, sensitivity, media"</string>
     <string name="keywords_vibration" msgid="670455132028025952">"haptics, vibrate, vibration"</string>
     <string name="keywords_battery_saver_sticky" msgid="1646191718840975110">"battery saver, sticky, persist, power saver, battery"</string>
     <string name="keywords_battery_saver_schedule" msgid="8240483934368455930">"routine, schedule, battery saver, power saver, battery, automatic, per cent"</string>
@@ -5380,6 +5410,8 @@
     <string name="content_capture" msgid="868372905432812238">"App content"</string>
     <string name="content_capture_summary" msgid="49720773699715531">"Allow apps to send content to the Android system"</string>
     <string name="capture_system_heap_dump_title" msgid="9210974110606886455">"Capture system heap dump"</string>
+    <string name="reboot_with_mte_title" msgid="9167242803901899693">"Reboot with MTE"</string>
+    <string name="reboot_with_mte_message" msgid="1024288615073985828">"This will reboot and allow you to experiment with Memory Tagging Extensions (MTE). This may negatively impact system performance and stability. Will be reset on next subsequent reboot."</string>
     <string name="capturing_system_heap_dump_message" msgid="8410503247477360622">"Capturing system heap dump"</string>
     <string name="error_capturing_system_heap_dump_message" msgid="2352983250048200052">"Couldn’t capture system heap dump"</string>
     <string name="automatic_system_heap_dump_title" msgid="4093306504711109479">"Automatically capture system heap dumps"</string>
@@ -5620,4 +5652,6 @@
     <item msgid="588427840913221601">"Process state"</item>
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Confirm"</string>
+    <string name="dream_preview_button_title" msgid="1498088020579092512">"Preview screensaver"</string>
+    <string name="customize_button_title" msgid="1110284655990203359">"Customise"</string>
 </resources>
