--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -317,11 +317,9 @@
     <string name="security_settings_title" msgid="6710768415432791970">"보안"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"암호화 및 사용자 인증 정보"</string>
     <string name="encryption_and_credential_settings_summary" product="default" msgid="5298195959570992363">"휴대전화 암호화됨"</string>
-    <!-- no translation found for not_encrypted_summary (2251945842585788254) -->
-    <skip />
+    <string name="not_encrypted_summary" product="default" msgid="2251945842585788254">"휴대전화가 암호화되지 않음"</string>
     <string name="encryption_and_credential_settings_summary" product="tablet" msgid="3776741531205406800">"기기가 암호화됨"</string>
-    <!-- no translation found for not_encrypted_summary (2374263654698719382) -->
-    <skip />
+    <string name="not_encrypted_summary" product="tablet" msgid="2374263654698719382">"기기가 암호화되지 않음"</string>
     <string name="lockscreen_settings_title" msgid="4086121748092341549">"잠금 화면"</string>
     <string name="lockscreen_settings_what_to_show_category" msgid="9205490627927741254">"표시 내용"</string>
     <string name="security_settings_summary" msgid="1627059516127354233">"내 위치, 화면 잠금해제, SIM 카드 잠금, 사용자 인증 정보 저장소 잠금 설정"</string>
@@ -509,6 +507,10 @@
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"지문 추가됨"</string>
     <string name="security_settings_fingerprint_enroll_finish_message" msgid="3469254005423998143">"이제 지문을 사용하여 휴대전화를 잠금 해제하거나 앱 로그인 등을 위해 본인을 인증할 수 있습니다."</string>
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"나중에"</string>
+    <!-- no translation found for security_settings_udfps_tip_fingerprint_help (7580784640741217494) -->
+    <skip />
+    <!-- no translation found for security_settings_udfps_side_fingerprint_help (2567232481013195191) -->
+    <skip />
     <string name="setup_fingerprint_enroll_enrolling_skip_title" msgid="352947044008973812">"지문 설정을 건너뛰시겠습니까?"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_message" msgid="4876965433600560365">"지문으로 휴대전화를 잠금 해제하도록 설정했습니다. 지금 건너뛰면 나중에 설정해야 하며 설정에는 약 1분 정도 소요됩니다."</string>
     <string name="lock_screen_pin_skip_message" product="tablet" msgid="4938798234214623521">"PIN을 사용하면 태블릿을 분실하거나 도난당했을 때 태블릿을 보호할 수 있습니다."</string>
@@ -586,14 +588,10 @@
     <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"지문을 사용하여 휴대전화를 잠금 해제하거나 앱에서 본인을 인증할 수 없게 됩니다."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"지문을 사용하여 직장 프로필을 잠금 해제하거나 구매를 승인하거나 직장 앱에 로그인할 수 없게 됩니다."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"삭제"</string>
-    <!-- no translation found for encryption_settings_title (2848716008695618360) -->
-    <skip />
-    <!-- no translation found for encrypt_title (6518642273119816435) -->
-    <skip />
-    <!-- no translation found for encrypt_title (7337365190988321100) -->
-    <skip />
-    <!-- no translation found for encrypted_summary (545623487587251207) -->
-    <skip />
+    <string name="encryption_settings_title" msgid="2848716008695618360">"암호화"</string>
+    <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"태블릿 암호화"</string>
+    <string name="encrypt_title" product="default" msgid="7337365190988321100">"휴대전화 암호화"</string>
+    <string name="encrypted_summary" msgid="545623487587251207">"암호화됨"</string>
     <string name="suggested_lock_settings_title" msgid="7836065447159730217">"휴대전화 보안 강화"</string>
     <string name="suggested_lock_settings_summary" product="tablet" msgid="3213718550422761562">"화면 잠금을 설정하여 태블릿 보호"</string>
     <string name="suggested_lock_settings_summary" product="device" msgid="8479766049078378225">"화면 잠금을 설정하여 기기 보호"</string>
@@ -1072,8 +1070,7 @@
     <string name="wifi_use_system_certs" msgid="5587866698144996931">"시스템 인증 사용"</string>
     <string name="wifi_do_not_provide_eap_user_cert" msgid="6336636553673065145">"제공하지 않음"</string>
     <string name="wifi_do_not_validate_eap_server" msgid="4673867078988209732">"확인하지 않음"</string>
-    <!-- no translation found for wifi_trust_on_first_use (7488431582505858774) -->
-    <skip />
+    <string name="wifi_trust_on_first_use" msgid="7488431582505858774">"처음 사용 시 신뢰"</string>
     <string name="wifi_ssid_too_long" msgid="5961719058705013875">"네트워크 이름이 너무 깁니다."</string>
     <string name="wifi_no_domain_warning" msgid="1452133316532366772">"도메인을 지정해야 합니다."</string>
     <string name="wifi_no_user_cert_warning" msgid="8466376918835248956">"인증서가 필요합니다."</string>
@@ -1417,7 +1414,6 @@
     <string name="screensaver_settings_disabled_prompt" msgid="1166343194760238835">"휴대전화가 도킹 또는 절전 모드일 때 작동 방식을 조정하려면 화면 보호기를 사용 설정합니다."</string>
     <string name="screensaver_settings_when_to_dream" msgid="8145025742428940520">"표시 시간"</string>
     <string name="screensaver_settings_current" msgid="390472865895976891">"현재 화면 보호기"</string>
-    <string name="screensaver_settings_dream_start" msgid="6486360145976995856">"지금 시작하기"</string>
     <string name="screensaver_settings_button" msgid="6159236558934930238">"설정"</string>
     <string name="automatic_brightness" msgid="4599827881929079513">"자동 밝기"</string>
     <string name="lift_to_wake_title" msgid="8994218158737714046">"기기를 들어 대기 모드 해제"</string>
@@ -2278,6 +2274,8 @@
     <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"자막 환경설정에 관해 자세히 알아보기"</string>
     <string name="accessibility_screen_magnification_title" msgid="1211169976144629087">"확대"</string>
     <string name="accessibility_screen_magnification_shortcut_title" msgid="2387963646377987780">"확대 바로가기"</string>
+    <string name="accessibility_screen_magnification_follow_typing_title" msgid="494025442124701045">"입력 따라가기"</string>
+    <string name="accessibility_screen_magnification_follow_typing_summary" msgid="5616263345412748821">"입력 중에 확대 영역이 텍스트를 자동으로 따라갑니다."</string>
     <string name="accessibility_screen_magnification_about_title" msgid="8857919020223505415">"확대 정보"</string>
     <string name="accessibility_screen_magnification_footer_learn_more_content_description" msgid="924848332575978463">"확대에 관해 자세히 알아보기"</string>
     <string name="accessibility_magnification_mode_title" msgid="8446475127807168063">"확대 유형"</string>
@@ -2299,7 +2297,12 @@
     <string name="accessibility_screen_magnification_navbar_title" msgid="480853328665484528">"바로가기를 사용하여 확대"</string>
     <string name="accessibility_screen_magnification_state_navbar_gesture" msgid="8067042663897802231">"바로가기 및 세 번 탭으로 확대"</string>
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"<xliff:g id="SERVICE">%1$s</xliff:g> 정보"</string>
-    <!-- no translation found for accessibility_text_reading_options_title (4684613866595056574) -->
+    <string name="accessibility_text_reading_options_title" msgid="4684613866595056574">"텍스트 및 읽기 옵션"</string>
+    <!-- no translation found for accessibility_text_reading_preview_mail_subject (8410011779056611430) -->
+    <skip />
+    <!-- no translation found for accessibility_text_reading_preview_mail_from (8008010238385973504) -->
+    <skip />
+    <!-- no translation found for accessibility_text_reading_preview_mail_content (2845972588748160509) -->
     <skip />
     <string name="accessibility_screen_option" msgid="8465307075278878145">"옵션"</string>
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"화면 확대"</string>
@@ -2407,17 +2410,21 @@
     <string name="accessibility_autoclick_longer_desc" msgid="2566025502981487443">"길게"</string>
     <string name="accessibility_autoclick_seekbar_desc" msgid="8363959277814621118">"자동 클릭 시간"</string>
     <string name="accessibility_vibration_settings_title" msgid="936301142478631993">"진동 및 햅틱"</string>
-    <!-- no translation found for accessibility_vibration_settings_summary (3690308537483465527) -->
-    <skip />
+    <string name="accessibility_vibration_settings_summary" msgid="3690308537483465527">"용도별로 진동 강도를 다르게 지정합니다."</string>
     <string name="accessibility_call_vibration_category_title" msgid="2545607568768192318">"전화"</string>
     <string name="accessibility_notification_alarm_vibration_category_title" msgid="2683635252414849417">"알림 및 알람"</string>
     <string name="accessibility_interactive_haptics_category_title" msgid="3162855291184592021">"양방향 햅틱"</string>
+    <!-- no translation found for accessibility_vibration_primary_switch_title (6162579254864450592) -->
+    <skip />
+    <string name="accessibility_alarm_vibration_title" msgid="4661294337828522745">"알람 진동"</string>
+    <string name="accessibility_media_vibration_title" msgid="1372073715403945428">"미디어 진동"</string>
     <string name="accessibility_ring_vibration_title" msgid="4689811297654320885">"벨소리 진동"</string>
     <string name="accessibility_notification_vibration_title" msgid="6205679908785776478">"알림 진동"</string>
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"터치 반응"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> 사용"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> 열기"</string>
-    <!-- no translation found for accessibility_service_quick_settings_tooltips_content (4033381225041886637) -->
+    <string name="accessibility_service_quick_settings_tooltips_content" msgid="4033381225041886637">"아래로 스와이프하여 빠른 설정에서 간단히 <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> 기능을 사용하거나 사용 중지할 수 있습니다."</string>
+    <!-- no translation found for accessibility_quick_settings_tooltips_dismiss (1684723414081728584) -->
     <skip />
     <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"색상 보정 사용"</string>
     <string name="accessibility_daltonizer_shortcut_title" msgid="7480360363995502369">"색상 보정 바로가기"</string>
@@ -2561,6 +2568,10 @@
     <string name="keywords_hearing_aids" msgid="524979615168196199">"난청, 청력 손실"</string>
     <string name="keywords_rtt" msgid="2429130928152514402">"난청, 청력 손실, 캡션, 텔레타이프, tty"</string>
     <string name="keywords_voice_access" msgid="7807335263195876454"></string>
+    <string name="fast_pair_settings" msgid="3308819519080016185">"빠른 페어링"</string>
+    <string name="fast_pair_settings_summary" msgid="1786567691058982987">"빠른 페어링이 지원되는 주변 블루투스 기기를 감지합니다."</string>
+    <!-- no translation found for fast_pair_main_switch_title (1439039801201425194) -->
+    <skip />
     <string name="print_settings" msgid="8519810615863882491">"인쇄"</string>
     <string name="print_settings_summary_no_service" msgid="6721731154917653862">"사용 안함"</string>
     <plurals name="print_settings_summary" formatted="false" msgid="1034273609054146099">
@@ -3349,12 +3360,29 @@
     <string name="user_choose_copy_apps_to_another_user" msgid="5914037067347012870">"설치할 앱 선택"</string>
     <string name="user_copy_apps_menu_title" msgid="5354300105759670300">"사용 가능한 앱 설치"</string>
     <string name="nfc_payment_settings_title" msgid="2043139180030485500">"미접촉 결제"</string>
+    <!-- no translation found for nfc_default_payment_settings_title (2150504446774382261) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_footer (978535088340021360) -->
+    <skip />
+    <!-- no translation found for nfc_more_details (1700713533074275233) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_workapp_confirmation_title (746921251872504687) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_title (1533022606333010329) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_1 (2917430119080702912) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_2 (480686123504790005) -->
+    <skip />
     <string name="nfc_payment_how_it_works" msgid="3658253265242662010">"작동 방식"</string>
     <string name="nfc_payment_no_apps" msgid="6840001883471438798">"매장에서 휴대전화로 결제"</string>
     <string name="nfc_payment_default" msgid="3769788268378614608">"기본 결제 앱"</string>
     <string name="nfc_payment_default_not_set" msgid="6471905683119084622">"설정되지 않음"</string>
     <string name="nfc_payment_app_and_desc" msgid="2607417639227030398">"<xliff:g id="APP">%1$s</xliff:g> - <xliff:g id="DESCRIPTION">%2$s</xliff:g>"</string>
-    <string name="nfc_payment_use_default" msgid="788899906312142803">"기본값 사용"</string>
+    <!-- no translation found for nfc_payment_use_default (6127665705799658860) -->
+    <skip />
+    <!-- no translation found for nfc_payment_use_default_dialog (8556328090777785383) -->
+    <skip />
     <string name="nfc_payment_favor_default" msgid="4508491832174644772">"항상"</string>
     <string name="nfc_payment_favor_open" msgid="8554643344050373346">"다른 결제 앱이 열려 있는 경우 제외"</string>
     <string name="nfc_payment_pay_with" msgid="3001320460566523453">"미접촉 결제 단말기에서 결제에 사용할 앱:"</string>
@@ -3580,17 +3608,21 @@
     <string name="keywords_screen_timeout" msgid="8921857020437540572">"화면, 잠금 시간, 자동 잠금 시간, 잠금 화면"</string>
     <string name="keywords_storage_settings" msgid="6018856193950281898">"메모리, 캐시, 데이터, 삭제, 지우기, 공간 확보, 공간"</string>
     <string name="keywords_bluetooth_settings" msgid="2588159530959868188">"연결됨, 기기, 헤드폰, 헤드셋, 스피커, 무선, 페어링, 이어폰, 음악, 미디어"</string>
+    <string name="keywords_fast_pair" msgid="5422942398816611159">"페어링, 이어폰, 블루투스"</string>
     <string name="keywords_wallpaper" msgid="7332890404629446192">"배경, 테마, 격자, 맞춤설정, 개인화"</string>
     <string name="keywords_styles" msgid="5291614313348476068">"아이콘, 강조, 색상"</string>
     <string name="keywords_assist_input" msgid="3086289530227075593">"기본, 지원"</string>
     <string name="keywords_default_payment_app" msgid="5162298193637362104">"결제, 기본"</string>
     <string name="keywords_ambient_display" msgid="3149287105145443697">"수신 알림"</string>
     <string name="keywords_hotspot_tethering" msgid="3688439689671232627">"USB 테더링, 블루투스 테더링, Wi-Fi 핫스팟"</string>
+    <!-- no translation found for keywords_accessibility_vibration_primary_switch (730692154347231253) -->
+    <skip />
     <string name="keywords_touch_vibration" msgid="1125291201902251273">"햅틱, 진동, 화면, 감도"</string>
     <string name="keywords_ring_vibration" msgid="1736301626537417541">"햅틱, 진동, 휴대전화, 통화, 민감도, 벨소리"</string>
-    <!-- no translation found for keywords_ramping_ringer_vibration (3678966746742257366) -->
-    <skip />
-    <string name="keywords_notification_vibration" msgid="9162262178415439951">"햅틱, 진동, 민감도"</string>
+    <string name="keywords_ramping_ringer_vibration" msgid="3678966746742257366">"햅틱, 진동, 휴대전화, 통화, 벨소리, 점진적"</string>
+    <string name="keywords_notification_vibration" msgid="2620799301276142183">"햅틱, 진동, 감도, 알림"</string>
+    <string name="keywords_alarm_vibration" msgid="4833220371621521817">"햅틱, 진동, 감도, 알람"</string>
+    <string name="keywords_media_vibration" msgid="723896490102792327">"햅틱, 진동, 감도, 미디어"</string>
     <string name="keywords_vibration" msgid="670455132028025952">"햅틱, 진동"</string>
     <string name="keywords_battery_saver_sticky" msgid="1646191718840975110">"절전 모드, 고정, 지속, 절전, 배터리"</string>
     <string name="keywords_battery_saver_schedule" msgid="8240483934368455930">"루틴, 일정, 절전 모드, 전력 절약 모드, 배터리, 자동, 퍼센트"</string>
@@ -5384,6 +5416,10 @@
     <string name="content_capture" msgid="868372905432812238">"앱 콘텐츠"</string>
     <string name="content_capture_summary" msgid="49720773699715531">"앱이 콘텐츠를 Android 시스템에 전송하도록 허용"</string>
     <string name="capture_system_heap_dump_title" msgid="9210974110606886455">"시스템 힙 덤프 캡처"</string>
+    <!-- no translation found for reboot_with_mte_title (9167242803901899693) -->
+    <skip />
+    <!-- no translation found for reboot_with_mte_message (1024288615073985828) -->
+    <skip />
     <string name="capturing_system_heap_dump_message" msgid="8410503247477360622">"시스템 힙 덤프 캡처 중"</string>
     <string name="error_capturing_system_heap_dump_message" msgid="2352983250048200052">"시스템 힙 덤프를 캡처하지 못함"</string>
     <string name="automatic_system_heap_dump_title" msgid="4093306504711109479">"시스템 힙 덤프 자동 캡처"</string>
@@ -5429,8 +5465,7 @@
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"길게"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"월렛 표시"</string>
     <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"잠금 화면 및 빠른 설정에서 월렛 액세스 허용"</string>
-    <!-- no translation found for lockscreen_privacy_qr_code_scanner_setting_toggle (4284186474146767523) -->
-    <skip />
+    <string name="lockscreen_privacy_qr_code_scanner_setting_toggle" msgid="4284186474146767523">"QR 스캐너 표시"</string>
     <string name="lockscreen_privacy_qr_code_scanner_summary" msgid="6152471629901191089">"잠금 화면에서 QR 스캐너에 액세스할 수 있도록 허용"</string>
     <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"기기 제어 표시"</string>
     <string name="lockscreen_privacy_controls_summary" msgid="6952176547084269909">"잠금 상태일 때 제어 기능에 액세스"</string>
@@ -5512,8 +5547,7 @@
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"모바일 데이터를 사용 중지하시겠습니까?"</string>
     <string name="mobile_data_disable_message" msgid="7829414836454769970">"<xliff:g id="CARRIER">%s</xliff:g> 통신사를 통해 데이터 또는 인터넷에 액세스할 수 없게 됩니다. 인터넷은 Wi-Fi를 통해서만 사용할 수 있습니다."</string>
     <string name="mobile_data_disable_message_default_carrier" msgid="4449469407705838612">"이동통신사"</string>
-    <!-- no translation found for not_allowed_by_ent (1958611623122304411) -->
-    <skip />
+    <string name="not_allowed_by_ent" msgid="1958611623122304411">"조직에서 허용하지 않음"</string>
     <string name="aware_summary_when_bedtime_on" msgid="2063856008597376344">"취침 모드가 켜져 있으므로 사용할 수 없습니다."</string>
     <string name="reset_importance_completed" msgid="3595536767426097205">"알림 중요도가 재설정되었습니다."</string>
     <string name="apps_dashboard_title" msgid="3269953499954393706">"앱"</string>
@@ -5626,4 +5660,8 @@
     <item msgid="588427840913221601">"프로세스 상태"</item>
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"확인"</string>
+    <!-- no translation found for dream_preview_button_title (1498088020579092512) -->
+    <skip />
+    <!-- no translation found for customize_button_title (1110284655990203359) -->
+    <skip />
 </resources>
