--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -317,11 +317,9 @@
     <string name="security_settings_title" msgid="6710768415432791970">"Segurança"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"Encriptação/credenciais"</string>
     <string name="encryption_and_credential_settings_summary" product="default" msgid="5298195959570992363">"Dados do telemóvel encriptados"</string>
-    <!-- no translation found for not_encrypted_summary (2251945842585788254) -->
-    <skip />
+    <string name="not_encrypted_summary" product="default" msgid="2251945842585788254">"Telemóvel não encriptado"</string>
     <string name="encryption_and_credential_settings_summary" product="tablet" msgid="3776741531205406800">"Dispositivo encriptado"</string>
-    <!-- no translation found for not_encrypted_summary (2374263654698719382) -->
-    <skip />
+    <string name="not_encrypted_summary" product="tablet" msgid="2374263654698719382">"Dispositivo não encriptado"</string>
     <string name="lockscreen_settings_title" msgid="4086121748092341549">"Ecrã de bloqueio"</string>
     <string name="lockscreen_settings_what_to_show_category" msgid="9205490627927741254">"O que apresentar"</string>
     <string name="security_settings_summary" msgid="1627059516127354233">"Definir A minha localização, desbloqueio do ecrã, bloqueio do cartão SIM, bloqueio do armazenamento de credenciais"</string>
@@ -507,6 +505,10 @@
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"Impressão digital adicionada"</string>
     <string name="security_settings_fingerprint_enroll_finish_message" msgid="3469254005423998143">"Já pode utilizar a sua impressão digital para desbloquear o telemóvel ou validar a sua identidade, como quando inicia sessão em apps"</string>
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Fazer isto mais tarde"</string>
+    <!-- no translation found for security_settings_udfps_tip_fingerprint_help (7580784640741217494) -->
+    <skip />
+    <!-- no translation found for security_settings_udfps_side_fingerprint_help (2567232481013195191) -->
+    <skip />
     <string name="setup_fingerprint_enroll_enrolling_skip_title" msgid="352947044008973812">"Ignorar configur. de impressão digital?"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_message" msgid="4876965433600560365">"Optou por utilizar a sua impressão digital como uma forma de desbloquear o telemóvel. Se ignorar agora, terá de configurar esta opção mais tarde. A configuração demora apenas alguns minutos."</string>
     <string name="lock_screen_pin_skip_message" product="tablet" msgid="4938798234214623521">"Um PIN protege o tablet em caso de perda ou roubo"</string>
@@ -584,14 +586,10 @@
     <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Não poderá utilizar a sua impressão digital para desbloquear o telemóvel ou validar a sua identidade nas apps."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Não poderá utilizar a sua impressão digital para desbloquear o perfil de trabalho, autorizar compras ou iniciar sessão nas apps de trabalho."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Sim, remover"</string>
-    <!-- no translation found for encryption_settings_title (2848716008695618360) -->
-    <skip />
-    <!-- no translation found for encrypt_title (6518642273119816435) -->
-    <skip />
-    <!-- no translation found for encrypt_title (7337365190988321100) -->
-    <skip />
-    <!-- no translation found for encrypted_summary (545623487587251207) -->
-    <skip />
+    <string name="encryption_settings_title" msgid="2848716008695618360">"Encriptação"</string>
+    <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Encriptar tablet"</string>
+    <string name="encrypt_title" product="default" msgid="7337365190988321100">"Encriptar telemóvel"</string>
+    <string name="encrypted_summary" msgid="545623487587251207">"Encriptado"</string>
     <string name="suggested_lock_settings_title" msgid="7836065447159730217">"Proteger o telemóvel"</string>
     <string name="suggested_lock_settings_summary" product="tablet" msgid="3213718550422761562">"Definir o bloqueio de ecrã para proteger o tablet"</string>
     <string name="suggested_lock_settings_summary" product="device" msgid="8479766049078378225">"Definir o bloqueio de ecrã para proteger o dispositivo"</string>
@@ -1070,8 +1068,7 @@
     <string name="wifi_use_system_certs" msgid="5587866698144996931">"Utilizar certificados do sistema"</string>
     <string name="wifi_do_not_provide_eap_user_cert" msgid="6336636553673065145">"Não fornecer"</string>
     <string name="wifi_do_not_validate_eap_server" msgid="4673867078988209732">"Não validar"</string>
-    <!-- no translation found for wifi_trust_on_first_use (7488431582505858774) -->
-    <skip />
+    <string name="wifi_trust_on_first_use" msgid="7488431582505858774">"Confiar na primeira utilização"</string>
     <string name="wifi_ssid_too_long" msgid="5961719058705013875">"O nome da rede é demasiado longo."</string>
     <string name="wifi_no_domain_warning" msgid="1452133316532366772">"É necessário especificar um domínio."</string>
     <string name="wifi_no_user_cert_warning" msgid="8466376918835248956">"Certificado obrigatório."</string>
@@ -1415,7 +1412,6 @@
     <string name="screensaver_settings_disabled_prompt" msgid="1166343194760238835">"Para controlar o que acontece quando o telemóvel está ancorado e/ou em suspensão, ative a proteção de ecrã."</string>
     <string name="screensaver_settings_when_to_dream" msgid="8145025742428940520">"Quando iniciar"</string>
     <string name="screensaver_settings_current" msgid="390472865895976891">"Proteção de ecrã atual"</string>
-    <string name="screensaver_settings_dream_start" msgid="6486360145976995856">"Iniciar agora"</string>
     <string name="screensaver_settings_button" msgid="6159236558934930238">"Definições"</string>
     <string name="automatic_brightness" msgid="4599827881929079513">"Brilho automático"</string>
     <string name="lift_to_wake_title" msgid="8994218158737714046">"Ativar ao levantar"</string>
@@ -2276,6 +2272,8 @@
     <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"Saiba mais acerca das preferências de legendas"</string>
     <string name="accessibility_screen_magnification_title" msgid="1211169976144629087">"Ampliação"</string>
     <string name="accessibility_screen_magnification_shortcut_title" msgid="2387963646377987780">"Atalho da ampliação"</string>
+    <string name="accessibility_screen_magnification_follow_typing_title" msgid="494025442124701045">"Seguir a escrita"</string>
+    <string name="accessibility_screen_magnification_follow_typing_summary" msgid="5616263345412748821">"A área de ampliação segue automaticamente o texto enquanto escreve"</string>
     <string name="accessibility_screen_magnification_about_title" msgid="8857919020223505415">"Acerca da ampliação"</string>
     <string name="accessibility_screen_magnification_footer_learn_more_content_description" msgid="924848332575978463">"Saiba mais acerca da ampliação"</string>
     <string name="accessibility_magnification_mode_title" msgid="8446475127807168063">"Tipo de ampliação"</string>
@@ -2298,6 +2296,12 @@
     <string name="accessibility_screen_magnification_state_navbar_gesture" msgid="8067042663897802231">"Amplie com um atalho e três toques"</string>
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"Acerca de <xliff:g id="SERVICE">%1$s</xliff:g>"</string>
     <string name="accessibility_text_reading_options_title" msgid="4684613866595056574">"Opções de texto e leitura"</string>
+    <!-- no translation found for accessibility_text_reading_preview_mail_subject (8410011779056611430) -->
+    <skip />
+    <!-- no translation found for accessibility_text_reading_preview_mail_from (8008010238385973504) -->
+    <skip />
+    <!-- no translation found for accessibility_text_reading_preview_mail_content (2845972588748160509) -->
+    <skip />
     <string name="accessibility_screen_option" msgid="8465307075278878145">"Opções"</string>
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"Aumentar zoom no ecrã"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"Tocar três vezes para aumentar/diminuir o zoom"</string>
@@ -2404,17 +2408,22 @@
     <string name="accessibility_autoclick_longer_desc" msgid="2566025502981487443">"Mais longo"</string>
     <string name="accessibility_autoclick_seekbar_desc" msgid="8363959277814621118">"Tempo do clique automático."</string>
     <string name="accessibility_vibration_settings_title" msgid="936301142478631993">"Vibração e funcionalidade tátil"</string>
-    <!-- no translation found for accessibility_vibration_settings_summary (3690308537483465527) -->
-    <skip />
+    <string name="accessibility_vibration_settings_summary" msgid="3690308537483465527">"Controle a intensidade da vibração para utilizações diferentes"</string>
     <string name="accessibility_call_vibration_category_title" msgid="2545607568768192318">"Chamadas"</string>
     <string name="accessibility_notification_alarm_vibration_category_title" msgid="2683635252414849417">"Notificações e alarmes"</string>
     <string name="accessibility_interactive_haptics_category_title" msgid="3162855291184592021">"Funcionalidade tátil interativa"</string>
+    <!-- no translation found for accessibility_vibration_primary_switch_title (6162579254864450592) -->
+    <skip />
+    <string name="accessibility_alarm_vibration_title" msgid="4661294337828522745">"Vibração do alarme"</string>
+    <string name="accessibility_media_vibration_title" msgid="1372073715403945428">"Vibração de multimédia"</string>
     <string name="accessibility_ring_vibration_title" msgid="4689811297654320885">"Vibração do toque"</string>
     <string name="accessibility_notification_vibration_title" msgid="6205679908785776478">"Vibração de notificações"</string>
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"Respostas por toque"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"Utilizar <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"Abrir <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_service_quick_settings_tooltips_content" msgid="4033381225041886637">"Deslize rapidamente para baixo para ativar ou desativar rapidamente a app <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> nas Definições rápidas"</string>
+    <!-- no translation found for accessibility_quick_settings_tooltips_dismiss (1684723414081728584) -->
+    <skip />
     <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"Utilizar a correção da cor"</string>
     <string name="accessibility_daltonizer_shortcut_title" msgid="7480360363995502369">"Atalho da correção da cor"</string>
     <string name="accessibility_daltonizer_about_title" msgid="6063650804116981287">"Acerca da correção da cor"</string>
@@ -2557,6 +2566,10 @@
     <string name="keywords_hearing_aids" msgid="524979615168196199">"dificuldade de audição, perda de audição"</string>
     <string name="keywords_rtt" msgid="2429130928152514402">"dificuldade de audição, perda de audição, legendas, teletipo"</string>
     <string name="keywords_voice_access" msgid="7807335263195876454"></string>
+    <string name="fast_pair_settings" msgid="3308819519080016185">"Fast Pair"</string>
+    <string name="fast_pair_settings_summary" msgid="1786567691058982987">"Deteção de disposit. Bluetooth Fast Pair próximos."</string>
+    <!-- no translation found for fast_pair_main_switch_title (1439039801201425194) -->
+    <skip />
     <string name="print_settings" msgid="8519810615863882491">"Impressão"</string>
     <string name="print_settings_summary_no_service" msgid="6721731154917653862">"Desativado"</string>
     <plurals name="print_settings_summary" formatted="false" msgid="1034273609054146099">
@@ -3345,12 +3358,29 @@
     <string name="user_choose_copy_apps_to_another_user" msgid="5914037067347012870">"Feche as apps para instalar"</string>
     <string name="user_copy_apps_menu_title" msgid="5354300105759670300">"Instalar apps disponíveis"</string>
     <string name="nfc_payment_settings_title" msgid="2043139180030485500">"Pagamentos sem contacto"</string>
+    <!-- no translation found for nfc_default_payment_settings_title (2150504446774382261) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_footer (978535088340021360) -->
+    <skip />
+    <!-- no translation found for nfc_more_details (1700713533074275233) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_workapp_confirmation_title (746921251872504687) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_title (1533022606333010329) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_1 (2917430119080702912) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_2 (480686123504790005) -->
+    <skip />
     <string name="nfc_payment_how_it_works" msgid="3658253265242662010">"Como funciona"</string>
     <string name="nfc_payment_no_apps" msgid="6840001883471438798">"Pague com o seu telemóvel em lojas"</string>
     <string name="nfc_payment_default" msgid="3769788268378614608">"Pagamento predefinido"</string>
     <string name="nfc_payment_default_not_set" msgid="6471905683119084622">"Não definida"</string>
     <string name="nfc_payment_app_and_desc" msgid="2607417639227030398">"<xliff:g id="APP">%1$s</xliff:g> – <xliff:g id="DESCRIPTION">%2$s</xliff:g>"</string>
-    <string name="nfc_payment_use_default" msgid="788899906312142803">"Utilizar predefinição"</string>
+    <!-- no translation found for nfc_payment_use_default (6127665705799658860) -->
+    <skip />
+    <!-- no translation found for nfc_payment_use_default_dialog (8556328090777785383) -->
+    <skip />
     <string name="nfc_payment_favor_default" msgid="4508491832174644772">"Sempre"</string>
     <string name="nfc_payment_favor_open" msgid="8554643344050373346">"Exceto enquanto outra app de pagamento está aberta"</string>
     <string name="nfc_payment_pay_with" msgid="3001320460566523453">"Num terminal sem contacto, pague com:"</string>
@@ -3576,17 +3606,21 @@
     <string name="keywords_screen_timeout" msgid="8921857020437540572">"ecrã, tempo de bloqueio, limite de tempo, ecrã de bloqueio"</string>
     <string name="keywords_storage_settings" msgid="6018856193950281898">"memória, cache, dados, eliminar, limpar, libertar, espaço"</string>
     <string name="keywords_bluetooth_settings" msgid="2588159530959868188">"associado, dispositivo, auscultadores, auscultadores com microfone integrado, altifalante, sem fios, sincronizar, auriculares, música, multimédia"</string>
+    <string name="keywords_fast_pair" msgid="5422942398816611159">"sincronizar, auriculares, bluetooth"</string>
     <string name="keywords_wallpaper" msgid="7332890404629446192">"fundo, tema, grelha, personalizar, personalização"</string>
     <string name="keywords_styles" msgid="5291614313348476068">"ícone, destaque, cor"</string>
     <string name="keywords_assist_input" msgid="3086289530227075593">"predefinição, assistente"</string>
     <string name="keywords_default_payment_app" msgid="5162298193637362104">"pagamento, predefinido"</string>
     <string name="keywords_ambient_display" msgid="3149287105145443697">"notificação recebida"</string>
     <string name="keywords_hotspot_tethering" msgid="3688439689671232627">"ligação à Internet via USB, ligação à Internet via Bluetooth, zona Wi-Fi"</string>
+    <!-- no translation found for keywords_accessibility_vibration_primary_switch (730692154347231253) -->
+    <skip />
     <string name="keywords_touch_vibration" msgid="1125291201902251273">"funcionalidade tátil, vibrar, ecrã, sensibilidade"</string>
     <string name="keywords_ring_vibration" msgid="1736301626537417541">"funcionalidade tátil, vibrar, telemóvel, chamada, sensibilidade, toque"</string>
-    <!-- no translation found for keywords_ramping_ringer_vibration (3678966746742257366) -->
-    <skip />
-    <string name="keywords_notification_vibration" msgid="9162262178415439951">"funcionalidade tátil, vibrar, sensibilidade"</string>
+    <string name="keywords_ramping_ringer_vibration" msgid="3678966746742257366">"funcionalidade tátil, vibrar, telemóvel, chamada, toque, gradualmente"</string>
+    <string name="keywords_notification_vibration" msgid="2620799301276142183">"funcionalidade tátil, vibrar, sensibilidade, notificação"</string>
+    <string name="keywords_alarm_vibration" msgid="4833220371621521817">"funcionalidade tátil, vibrar, sensibilidade, alarme"</string>
+    <string name="keywords_media_vibration" msgid="723896490102792327">"funcionalidade tátil, vibrar, sensibilidade, multimédia"</string>
     <string name="keywords_vibration" msgid="670455132028025952">"funcionalidade tátil, vibrar, vibração"</string>
     <string name="keywords_battery_saver_sticky" msgid="1646191718840975110">"poupança de bateria, fixa, persistente, poupança de energia, bateria"</string>
     <string name="keywords_battery_saver_schedule" msgid="8240483934368455930">"rotina, horário, poupança de bateria, poupança de energia, bateria, automática, percentagem"</string>
@@ -5380,6 +5414,10 @@
     <string name="content_capture" msgid="868372905432812238">"Conteúdo da aplicação"</string>
     <string name="content_capture_summary" msgid="49720773699715531">"Permitir que as apps enviem conteúdo para o sistema Android"</string>
     <string name="capture_system_heap_dump_title" msgid="9210974110606886455">"Fazer a captura da área dinâmica para dados do sistema"</string>
+    <!-- no translation found for reboot_with_mte_title (9167242803901899693) -->
+    <skip />
+    <!-- no translation found for reboot_with_mte_message (1024288615073985828) -->
+    <skip />
     <string name="capturing_system_heap_dump_message" msgid="8410503247477360622">"A fazer a captura da área dinâmica para dados do sistema…"</string>
     <string name="error_capturing_system_heap_dump_message" msgid="2352983250048200052">"Não foi possível fazer a captura da área dinâmica para dados do sistema."</string>
     <string name="automatic_system_heap_dump_title" msgid="4093306504711109479">"Fazer automaticamente capturas da área dinâmica para dados do sistema"</string>
@@ -5620,4 +5658,8 @@
     <item msgid="588427840913221601">"Estado do processo"</item>
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Confirmar"</string>
+    <!-- no translation found for dream_preview_button_title (1498088020579092512) -->
+    <skip />
+    <!-- no translation found for customize_button_title (1110284655990203359) -->
+    <skip />
 </resources>
