--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -320,11 +320,9 @@
     <string name="security_settings_title" msgid="6710768415432791970">"Безбедност"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"Шифровање и акредитиви"</string>
     <string name="encryption_and_credential_settings_summary" product="default" msgid="5298195959570992363">"Телефон је шифрован"</string>
-    <!-- no translation found for not_encrypted_summary (2251945842585788254) -->
-    <skip />
+    <string name="not_encrypted_summary" product="default" msgid="2251945842585788254">"Телефон није шифрован"</string>
     <string name="encryption_and_credential_settings_summary" product="tablet" msgid="3776741531205406800">"Уређај је шифрован"</string>
-    <!-- no translation found for not_encrypted_summary (2374263654698719382) -->
-    <skip />
+    <string name="not_encrypted_summary" product="tablet" msgid="2374263654698719382">"Уређај није шифрован"</string>
     <string name="lockscreen_settings_title" msgid="4086121748092341549">"Закључани екран"</string>
     <string name="lockscreen_settings_what_to_show_category" msgid="9205490627927741254">"Шта се приказује"</string>
     <string name="security_settings_summary" msgid="1627059516127354233">"Подешавање Моје локације, откључавања екрана, закључавања SIM картице и закључавања акредитива складишта"</string>
@@ -511,6 +509,8 @@
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"Отисак прста је додат"</string>
     <string name="security_settings_fingerprint_enroll_finish_message" msgid="3469254005423998143">"Сада можете да користите отисак прста за откључавање телефона или потврду идентитета, на пример, кад се пријављујете у апликације"</string>
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Урадићу то касније"</string>
+    <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Подигните, па опет додирните"</string>
+    <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Ставите једну страну прста на сензор и задржите, па ставите другу страну"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_title" msgid="352947044008973812">"Прескочити подешавање отиска прста?"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_message" msgid="4876965433600560365">"Изабрали сте да користите отисак прста као један начин за откључавање телефона. Ако сада прескочите, мораћете касније да обавите ово подешавање. За подешавање је потребно само око минут времена."</string>
     <string name="lock_screen_pin_skip_message" product="tablet" msgid="4938798234214623521">"PIN штити таблет ако га изгубите или га неко украде"</string>
@@ -588,14 +588,10 @@
     <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Нећете моћи да користите отисак прста да бисте откључавали телефон или верификовали идентитет у апликацијама."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Нећете моћи да користите отисак прста за откључавање пословног профила, овлашћивање куповина или пријављивање у пословне апликације."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Да, уклони"</string>
-    <!-- no translation found for encryption_settings_title (2848716008695618360) -->
-    <skip />
-    <!-- no translation found for encrypt_title (6518642273119816435) -->
-    <skip />
-    <!-- no translation found for encrypt_title (7337365190988321100) -->
-    <skip />
-    <!-- no translation found for encrypted_summary (545623487587251207) -->
-    <skip />
+    <string name="encryption_settings_title" msgid="2848716008695618360">"Шифровање"</string>
+    <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Шифруј таблет"</string>
+    <string name="encrypt_title" product="default" msgid="7337365190988321100">"Шифруј телефон"</string>
+    <string name="encrypted_summary" msgid="545623487587251207">"Шифровано"</string>
     <string name="suggested_lock_settings_title" msgid="7836065447159730217">"Заштитите телефон"</string>
     <string name="suggested_lock_settings_summary" product="tablet" msgid="3213718550422761562">"Подесите закључавање екрана да бисте заштитили таблет"</string>
     <string name="suggested_lock_settings_summary" product="device" msgid="8479766049078378225">"Подесите закључавање екрана да бисте заштитили уређај"</string>
@@ -1087,8 +1083,7 @@
     <string name="wifi_use_system_certs" msgid="5587866698144996931">"Користи сертификате система"</string>
     <string name="wifi_do_not_provide_eap_user_cert" msgid="6336636553673065145">"Не пружај"</string>
     <string name="wifi_do_not_validate_eap_server" msgid="4673867078988209732">"Не проверавај"</string>
-    <!-- no translation found for wifi_trust_on_first_use (7488431582505858774) -->
-    <skip />
+    <string name="wifi_trust_on_first_use" msgid="7488431582505858774">"Сматрај поузданим приликом прве употребе"</string>
     <string name="wifi_ssid_too_long" msgid="5961719058705013875">"Назив мреже је предугачак."</string>
     <string name="wifi_no_domain_warning" msgid="1452133316532366772">"Морате да наведете домен."</string>
     <string name="wifi_no_user_cert_warning" msgid="8466376918835248956">"Сертификат је обавезан."</string>
@@ -1435,7 +1430,6 @@
     <string name="screensaver_settings_disabled_prompt" msgid="1166343194760238835">"Да бисте контролисали шта се дешава када је телефон на базној станици и/или у стању спавања, укључите чувар екрана."</string>
     <string name="screensaver_settings_when_to_dream" msgid="8145025742428940520">"Када да почне"</string>
     <string name="screensaver_settings_current" msgid="390472865895976891">"Тренутни чувар екрана"</string>
-    <string name="screensaver_settings_dream_start" msgid="6486360145976995856">"Почни одмах"</string>
     <string name="screensaver_settings_button" msgid="6159236558934930238">"Подешавања"</string>
     <string name="automatic_brightness" msgid="4599827881929079513">"Аутоматски ниво осветљености"</string>
     <string name="lift_to_wake_title" msgid="8994218158737714046">"Подигни за активацију"</string>
@@ -2300,6 +2294,8 @@
     <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"Сазнајте више о подешавањима титлова"</string>
     <string name="accessibility_screen_magnification_title" msgid="1211169976144629087">"Увећање"</string>
     <string name="accessibility_screen_magnification_shortcut_title" msgid="2387963646377987780">"Пречица за увећање"</string>
+    <string name="accessibility_screen_magnification_follow_typing_title" msgid="494025442124701045">"Пратите куцање"</string>
+    <string name="accessibility_screen_magnification_follow_typing_summary" msgid="5616263345412748821">"Област за увећање аутоматски прати текст док куцате"</string>
     <string name="accessibility_screen_magnification_about_title" msgid="8857919020223505415">"О увећању"</string>
     <string name="accessibility_screen_magnification_footer_learn_more_content_description" msgid="924848332575978463">"Сазнајте више о увећању"</string>
     <string name="accessibility_magnification_mode_title" msgid="8446475127807168063">"Тип увећања"</string>
@@ -2322,6 +2318,12 @@
     <string name="accessibility_screen_magnification_state_navbar_gesture" msgid="8067042663897802231">"Увећавајте помоћу пречице и троструког додира"</string>
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"О услузи <xliff:g id="SERVICE">%1$s</xliff:g>"</string>
     <string name="accessibility_text_reading_options_title" msgid="4684613866595056574">"Опције за текст и читање"</string>
+    <!-- no translation found for accessibility_text_reading_preview_mail_subject (8410011779056611430) -->
+    <skip />
+    <!-- no translation found for accessibility_text_reading_preview_mail_from (8008010238385973504) -->
+    <skip />
+    <!-- no translation found for accessibility_text_reading_preview_mail_content (2845972588748160509) -->
+    <skip />
     <string name="accessibility_screen_option" msgid="8465307075278878145">"Опције"</string>
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"Увећајте приказ на екрану"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"Додирните 3 пута да бисте зумирали"</string>
@@ -2428,17 +2430,21 @@
     <string name="accessibility_autoclick_longer_desc" msgid="2566025502981487443">"Дуже"</string>
     <string name="accessibility_autoclick_seekbar_desc" msgid="8363959277814621118">"Трајање аутоматског клика"</string>
     <string name="accessibility_vibration_settings_title" msgid="936301142478631993">"Вибрирање и додирне повратне информације"</string>
-    <!-- no translation found for accessibility_vibration_settings_summary (3690308537483465527) -->
-    <skip />
+    <string name="accessibility_vibration_settings_summary" msgid="3690308537483465527">"Контролишите јачину вибрације за различите употребе"</string>
     <string name="accessibility_call_vibration_category_title" msgid="2545607568768192318">"Позиви"</string>
     <string name="accessibility_notification_alarm_vibration_category_title" msgid="2683635252414849417">"Обавештења и аларми"</string>
     <string name="accessibility_interactive_haptics_category_title" msgid="3162855291184592021">"Интерактивне додирне повратне информације"</string>
+    <string name="accessibility_vibration_primary_switch_title" msgid="6162579254864450592">"Користите вибрирање и додирне повратне информације"</string>
+    <string name="accessibility_alarm_vibration_title" msgid="4661294337828522745">"Вибрирање аларма"</string>
+    <string name="accessibility_media_vibration_title" msgid="1372073715403945428">"Вибрирање медија"</string>
     <string name="accessibility_ring_vibration_title" msgid="4689811297654320885">"Вибрирање звона"</string>
     <string name="accessibility_notification_vibration_title" msgid="6205679908785776478">"Вибрирање обавештења"</string>
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"Додирне повратне информације"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"Користи апликацију <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"Отворите апликацију <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_service_quick_settings_tooltips_content" msgid="4033381225041886637">"Превуците надоле да бисте брзо укључили или искључили апликацију<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> у брзим подешавањима"</string>
+    <!-- no translation found for accessibility_quick_settings_tooltips_dismiss (1684723414081728584) -->
+    <skip />
     <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"Користи корекцију боја"</string>
     <string name="accessibility_daltonizer_shortcut_title" msgid="7480360363995502369">"Пречица за корекцију боја"</string>
     <string name="accessibility_daltonizer_about_title" msgid="6063650804116981287">"О корекцији боја"</string>
@@ -2586,6 +2592,10 @@
     <string name="keywords_hearing_aids" msgid="524979615168196199">"оштећење слуха, губитак слуха"</string>
     <string name="keywords_rtt" msgid="2429130928152514402">"оштећење слуха, губитак слуха, титл, телепринтер, tty"</string>
     <string name="keywords_voice_access" msgid="7807335263195876454"></string>
+    <string name="fast_pair_settings" msgid="3308819519080016185">"Брзо упаривање"</string>
+    <string name="fast_pair_settings_summary" msgid="1786567691058982987">"Откривање Bluetooth уређ. за Брзо упарив. у близ."</string>
+    <!-- no translation found for fast_pair_main_switch_title (1439039801201425194) -->
+    <skip />
     <string name="print_settings" msgid="8519810615863882491">"Штампање"</string>
     <string name="print_settings_summary_no_service" msgid="6721731154917653862">"Искључено"</string>
     <plurals name="print_settings_summary" formatted="false" msgid="1034273609054146099">
@@ -3389,12 +3399,29 @@
     <string name="user_choose_copy_apps_to_another_user" msgid="5914037067347012870">"Изаберите апликације које ће се инсталирати"</string>
     <string name="user_copy_apps_menu_title" msgid="5354300105759670300">"Инсталирајте доступне апликације"</string>
     <string name="nfc_payment_settings_title" msgid="2043139180030485500">"Бесконтактна плаћања"</string>
+    <!-- no translation found for nfc_default_payment_settings_title (2150504446774382261) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_footer (978535088340021360) -->
+    <skip />
+    <!-- no translation found for nfc_more_details (1700713533074275233) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_workapp_confirmation_title (746921251872504687) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_title (1533022606333010329) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_1 (2917430119080702912) -->
+    <skip />
+    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_2 (480686123504790005) -->
+    <skip />
     <string name="nfc_payment_how_it_works" msgid="3658253265242662010">"Како то функционише"</string>
     <string name="nfc_payment_no_apps" msgid="6840001883471438798">"Платите помоћу телефона у продавницама"</string>
     <string name="nfc_payment_default" msgid="3769788268378614608">"Подразумевано за плаћање"</string>
     <string name="nfc_payment_default_not_set" msgid="6471905683119084622">"Није подешено"</string>
     <string name="nfc_payment_app_and_desc" msgid="2607417639227030398">"<xliff:g id="APP">%1$s</xliff:g> – <xliff:g id="DESCRIPTION">%2$s</xliff:g>"</string>
-    <string name="nfc_payment_use_default" msgid="788899906312142803">"Користи подразумевано"</string>
+    <!-- no translation found for nfc_payment_use_default (6127665705799658860) -->
+    <skip />
+    <!-- no translation found for nfc_payment_use_default_dialog (8556328090777785383) -->
+    <skip />
     <string name="nfc_payment_favor_default" msgid="4508491832174644772">"Увек"</string>
     <string name="nfc_payment_favor_open" msgid="8554643344050373346">"Осим кад је отворена друга апликација за плаћање"</string>
     <string name="nfc_payment_pay_with" msgid="3001320460566523453">"На терминалу за бесконтактно плаћање користиће се:"</string>
@@ -3621,17 +3648,20 @@
     <string name="keywords_screen_timeout" msgid="8921857020437540572">"екран, време закључавања, гашење екрана, закључан екран"</string>
     <string name="keywords_storage_settings" msgid="6018856193950281898">"меморија, кеш, подаци, избриши, обриши, слободно, простор"</string>
     <string name="keywords_bluetooth_settings" msgid="2588159530959868188">"повезано, уређај, слушалице, хедсет, звучник, бежично, упари, бубице, музика, медији"</string>
+    <string name="keywords_fast_pair" msgid="5422942398816611159">"упаривање, слушалице, bluetooth"</string>
     <string name="keywords_wallpaper" msgid="7332890404629446192">"позадина, тема, координатна мрежа, прилагодити, персонализовати"</string>
     <string name="keywords_styles" msgid="5291614313348476068">"икона, наглашавање, боја"</string>
     <string name="keywords_assist_input" msgid="3086289530227075593">"подразумевано, помоћник"</string>
     <string name="keywords_default_payment_app" msgid="5162298193637362104">"плаћање, подразумевано"</string>
     <string name="keywords_ambient_display" msgid="3149287105145443697">"долазно обавештење"</string>
     <string name="keywords_hotspot_tethering" msgid="3688439689671232627">"usb привезивање, bluetooth привезивање, wi-fi хотспот"</string>
+    <string name="keywords_accessibility_vibration_primary_switch" msgid="730692154347231253">"додирне повратне информације, вибрирање, вибрација"</string>
     <string name="keywords_touch_vibration" msgid="1125291201902251273">"додирне повратне информације, вибрација, екран, осетљивост"</string>
     <string name="keywords_ring_vibration" msgid="1736301626537417541">"додирне повратне информације, вибрирање, телефон, позив, осетљивост, звоно"</string>
-    <!-- no translation found for keywords_ramping_ringer_vibration (3678966746742257366) -->
-    <skip />
-    <string name="keywords_notification_vibration" msgid="9162262178415439951">"додирне повратне информације, вибрирање, осетљивост"</string>
+    <string name="keywords_ramping_ringer_vibration" msgid="3678966746742257366">"додирне повратне информације, вибрирање, телефон, позив, звоно, постепено"</string>
+    <string name="keywords_notification_vibration" msgid="2620799301276142183">"додирне повратне информације, вибрација, осетљивост, обавештење"</string>
+    <string name="keywords_alarm_vibration" msgid="4833220371621521817">"додирне повратне информације, вибрација, осетљивост, аларм"</string>
+    <string name="keywords_media_vibration" msgid="723896490102792327">"додирне повратне информације, вибрација, осетљивост, медији"</string>
     <string name="keywords_vibration" msgid="670455132028025952">"додирне повратне информације, вибрација, вибрирање"</string>
     <string name="keywords_battery_saver_sticky" msgid="1646191718840975110">"уштеда батерије, лепљиво, трајно, уштеда енергије, батерија"</string>
     <string name="keywords_battery_saver_schedule" msgid="8240483934368455930">"рутина, распоред, уштеда батерије, уштеда енергије, батерија, аутоматско, проценат"</string>
@@ -5469,6 +5499,8 @@
     <string name="content_capture" msgid="868372905432812238">"Садржај апликације"</string>
     <string name="content_capture_summary" msgid="49720773699715531">"Дозволите апликацијама да шаљу садржај Android систему"</string>
     <string name="capture_system_heap_dump_title" msgid="9210974110606886455">"Сними динамички део меморије система"</string>
+    <string name="reboot_with_mte_title" msgid="9167242803901899693">"Рестартуј уз MTE"</string>
+    <string name="reboot_with_mte_message" msgid="1024288615073985828">"Овим ћете обавити рестартовање и омогућити експериментисање са Додацима за означавање меморије (MTE). То може негативно да утиче на учинак и стабилност система. Ресетовање ће се обавити при следећем рестартовању."</string>
     <string name="capturing_system_heap_dump_message" msgid="8410503247477360622">"Снимање динамичког дела меморије система"</string>
     <string name="error_capturing_system_heap_dump_message" msgid="2352983250048200052">"Снимање динамичког дела меморије система није успело"</string>
     <string name="automatic_system_heap_dump_title" msgid="4093306504711109479">"Аутоматски снимај динамички део меморије система"</string>
@@ -5709,4 +5741,6 @@
     <item msgid="588427840913221601">"Статус процеса"</item>
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Потврди"</string>
+    <string name="dream_preview_button_title" msgid="1498088020579092512">"Прегледајте чувар екрана"</string>
+    <string name="customize_button_title" msgid="1110284655990203359">"Прилагодите"</string>
 </resources>
